feat(badge): Sprint 22 Badge-0 - badge engine + DB + popups
- Add badges table migration (006_badges.sql) with RLS + partial unique indexes
- Create BadgeModel (BadgeDefinition, BadgeAchievement, enums)
- Create BadgeRepository (Supabase CRUD, duplicate-safe save)
- Create BadgeEngine (13 badges: feeding 5, sleep 5, parenting 3)
- Create BadgeProvider (state + popup queue, max 2/session, memory cache)
- Create BadgePopup (3 tiers: normal/warm/tearful)
- Integrate HomeProvider.addActivity -> BadgeProvider.onActivitySaved
- Integrate ImportProvider -> BadgeProvider.onBulkImport (Phase 7.5)
- Add MainNavigation Stack overlay for cross-tab popup display
- Add LuluIcons.trophy + LuluIcons.badge
- Add SupabaseService.badges accessor
- Add ~90 i18n keys (EN + KO) for 13 badges x 3 tones
- Add 35 unit tests (all pass)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2515,5 +2515,129 @@
   "viewRecord": "View Records",
   "@viewRecord": {
     "description": "SnackBar action to navigate to records tab"
-  }
+  },
+
+  "badgeUnlocked": "Badge Unlocked!",
+  "@badgeUnlocked": {"description": "Badge popup header"},
+  "badgeDismiss": "OK",
+  "@badgeDismiss": {"description": "Badge popup dismiss button"},
+  "badgeShare": "Share",
+  "@badgeShare": {"description": "Badge popup share button"},
+
+  "badgeFirstFeedingTitle": "First Feeding",
+  "@badgeFirstFeedingTitle": {"description": "Badge title: first feeding record"},
+  "badgeFirstFeedingDesc": "You recorded your first feeding!",
+  "@badgeFirstFeedingDesc": {"description": "Badge desc: first feeding"},
+  "badgeFirstFeedingWarm": "The first feeding... a moment full of love.",
+  "@badgeFirstFeedingWarm": {"description": "Badge warm tone: first feeding"},
+  "badgeFirstFeedingHumor": "Mission: First Feed complete!",
+  "@badgeFirstFeedingHumor": {"description": "Badge humor tone: first feeding"},
+
+  "badgeFeeding10Title": "10 Feedings",
+  "@badgeFeeding10Title": {"description": "Badge title: 10 feedings"},
+  "badgeFeeding10Desc": "You have recorded 10 feedings!",
+  "@badgeFeeding10Desc": {"description": "Badge desc: 10 feedings"},
+  "badgeFeeding10Warm": "10 feedings... every drop is love.",
+  "@badgeFeeding10Warm": {"description": "Badge warm: 10 feedings"},
+  "badgeFeeding10Humor": "10 feeds down! Keep going, champ!",
+  "@badgeFeeding10Humor": {"description": "Badge humor: 10 feedings"},
+
+  "badgeFeeding50Title": "50 Feedings",
+  "@badgeFeeding50Title": {"description": "Badge title: 50 feedings"},
+  "badgeFeeding50Desc": "50 feedings recorded! Incredible dedication.",
+  "@badgeFeeding50Desc": {"description": "Badge desc: 50 feedings"},
+  "badgeFeeding50Warm": "50 feedings... you are truly amazing.",
+  "@badgeFeeding50Warm": {"description": "Badge warm: 50 feedings"},
+  "badgeFeeding50Humor": "50 feeds! Your baby appreciates every one!",
+  "@badgeFeeding50Humor": {"description": "Badge humor: 50 feedings"},
+
+  "badgeMilk1LTitle": "1 Liter of Love",
+  "@badgeMilk1LTitle": {"description": "Badge title: cumulative 1L milk"},
+  "badgeMilk1LDesc": "Total milk intake reached 1 liter!",
+  "@badgeMilk1LDesc": {"description": "Badge desc: 1L milk"},
+  "badgeMilk1LWarm": "1 liter of love... every milliliter matters.",
+  "@badgeMilk1LWarm": {"description": "Badge warm: 1L milk"},
+  "badgeMilk1LHumor": "1 liter! That's a lot of milk!",
+  "@badgeMilk1LHumor": {"description": "Badge humor: 1L milk"},
+
+  "badgeNightFeedingTitle": "Midnight Hero",
+  "@badgeNightFeedingTitle": {"description": "Badge title: night feeding"},
+  "badgeNightFeedingDesc": "First feeding between midnight and 5 AM.",
+  "@badgeNightFeedingDesc": {"description": "Badge desc: night feeding"},
+  "badgeNightFeedingWarm": "Feeding at dawn... you're the bravest.",
+  "@badgeNightFeedingWarm": {"description": "Badge warm: night feeding"},
+  "badgeNightFeedingHumor": "Who needs sleep anyway? Hero mode: ON!",
+  "@badgeNightFeedingHumor": {"description": "Badge humor: night feeding"},
+
+  "badgeFirstSleepTitle": "First Sleep",
+  "@badgeFirstSleepTitle": {"description": "Badge title: first sleep record"},
+  "badgeFirstSleepDesc": "You recorded your baby's first sleep!",
+  "@badgeFirstSleepDesc": {"description": "Badge desc: first sleep"},
+  "badgeFirstSleepWarm": "Sweet dreams begin now...",
+  "@badgeFirstSleepWarm": {"description": "Badge warm: first sleep"},
+  "badgeFirstSleepHumor": "Zzz... the first nap is in the books!",
+  "@badgeFirstSleepHumor": {"description": "Badge humor: first sleep"},
+
+  "badgeSleep10Title": "10 Sleeps",
+  "@badgeSleep10Title": {"description": "Badge title: 10 sleep records"},
+  "badgeSleep10Desc": "10 sleep records! Great tracking!",
+  "@badgeSleep10Desc": {"description": "Badge desc: 10 sleeps"},
+  "badgeSleep10Warm": "10 peaceful sleeps... you're doing great.",
+  "@badgeSleep10Warm": {"description": "Badge warm: 10 sleeps"},
+  "badgeSleep10Humor": "10 naps tracked! Sleep expert in training!",
+  "@badgeSleep10Humor": {"description": "Badge humor: 10 sleeps"},
+
+  "badgeSleepThroughTitle": "First Full Night",
+  "@badgeSleepThroughTitle": {"description": "Badge title: first sleep through night"},
+  "badgeSleepThroughDesc": "Baby slept 7+ hours through the night!",
+  "@badgeSleepThroughDesc": {"description": "Badge desc: sleep through"},
+  "badgeSleepThroughWarm": "A full night's sleep... you both deserve this.",
+  "@badgeSleepThroughWarm": {"description": "Badge warm: sleep through"},
+  "badgeSleepThroughHumor": "7 hours straight! Is this real life?!",
+  "@badgeSleepThroughHumor": {"description": "Badge humor: sleep through"},
+
+  "badgeSleepRoutineTitle": "Sleep Routine",
+  "@badgeSleepRoutineTitle": {"description": "Badge title: 3-day sleep streak"},
+  "badgeSleepRoutineDesc": "3 consecutive days with sleep records!",
+  "@badgeSleepRoutineDesc": {"description": "Badge desc: sleep routine"},
+  "badgeSleepRoutineWarm": "3 days of routine... building healthy habits.",
+  "@badgeSleepRoutineWarm": {"description": "Badge warm: sleep routine"},
+  "badgeSleepRoutineHumor": "3-day streak! Consistency is key!",
+  "@badgeSleepRoutineHumor": {"description": "Badge humor: sleep routine"},
+
+  "badgeSleepWeekTitle": "Sleep Week Master",
+  "@badgeSleepWeekTitle": {"description": "Badge title: 7-day sleep streak"},
+  "badgeSleepWeekDesc": "7 consecutive days with sleep records!",
+  "@badgeSleepWeekDesc": {"description": "Badge desc: sleep week"},
+  "badgeSleepWeekWarm": "A whole week... your dedication is beautiful.",
+  "@badgeSleepWeekWarm": {"description": "Badge warm: sleep week"},
+  "badgeSleepWeekHumor": "7 days! You deserve a medal... oh wait!",
+  "@badgeSleepWeekHumor": {"description": "Badge humor: sleep week"},
+
+  "badgeFirstRecordTitle": "Hello, Lulu!",
+  "@badgeFirstRecordTitle": {"description": "Badge title: very first record"},
+  "badgeFirstRecordDesc": "You saved your very first record!",
+  "@badgeFirstRecordDesc": {"description": "Badge desc: first record"},
+  "badgeFirstRecordWarm": "The journey begins... welcome to Lulu.",
+  "@badgeFirstRecordWarm": {"description": "Badge warm: first record"},
+  "badgeFirstRecordHumor": "First record! And so it begins!",
+  "@badgeFirstRecordHumor": {"description": "Badge humor: first record"},
+
+  "badge3DayStreakTitle": "3-Day Streak",
+  "@badge3DayStreakTitle": {"description": "Badge title: 3 consecutive recording days"},
+  "badge3DayStreakDesc": "3 days of recording! Great habit!",
+  "@badge3DayStreakDesc": {"description": "Badge desc: 3-day streak"},
+  "badge3DayStreakWarm": "3 days together... every moment matters.",
+  "@badge3DayStreakWarm": {"description": "Badge warm: 3-day streak"},
+  "badge3DayStreakHumor": "3 days! You're on fire!",
+  "@badge3DayStreakHumor": {"description": "Badge humor: 3-day streak"},
+
+  "badge7DayStreakTitle": "7-Day Champion",
+  "@badge7DayStreakTitle": {"description": "Badge title: 7 consecutive recording days"},
+  "badge7DayStreakDesc": "7 days of recording! Amazing commitment!",
+  "@badge7DayStreakDesc": {"description": "Badge desc: 7-day streak"},
+  "badge7DayStreakWarm": "A whole week... you're the best parent.",
+  "@badge7DayStreakWarm": {"description": "Badge warm: 7-day streak"},
+  "badge7DayStreakHumor": "7-day streak! Call the Guinness Book!",
+  "@badge7DayStreakHumor": {"description": "Badge humor: 7-day streak"}
 }
