--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -5062,5 +5062,129 @@
   "dateFormatMonthDay": "M월 d일 (E)",
   "@dateFormatMonthDay": {"description":"월일 날짜 포맷"},
   "growthMetricChartTitle": "{metric} 성장 차트",
-  "@growthMetricChartTitle": {"description":"성장 차트 제목","placeholders":{"metric":{"type":"String","example":"체중"}}}
+  "@growthMetricChartTitle": {"description":"성장 차트 제목","placeholders":{"metric":{"type":"String","example":"체중"}}},
+
+  "badgeUnlocked": "배지 획득!",
+  "@badgeUnlocked": {"description":"배지 팝업 헤더"},
+  "badgeDismiss": "확인",
+  "@badgeDismiss": {"description":"배지 팝업 닫기 버튼"},
+  "badgeShare": "공유",
+  "@badgeShare": {"description":"배지 팝업 공유 버튼"},
+
+  "badgeFirstFeedingTitle": "첫 수유",
+  "@badgeFirstFeedingTitle": {"description":"배지: 첫 수유 기록"},
+  "badgeFirstFeedingDesc": "첫 수유를 기록했어요!",
+  "@badgeFirstFeedingDesc": {"description":"배지 설명: 첫 수유"},
+  "badgeFirstFeedingWarm": "첫 수유... 사랑이 가득한 순간이에요.",
+  "@badgeFirstFeedingWarm": {"description":"배지 따뜻한 톤: 첫 수유"},
+  "badgeFirstFeedingHumor": "미션: 첫 수유 완료!",
+  "@badgeFirstFeedingHumor": {"description":"배지 유머 톤: 첫 수유"},
+
+  "badgeFeeding10Title": "수유 10회",
+  "@badgeFeeding10Title": {"description":"배지: 수유 10회"},
+  "badgeFeeding10Desc": "수유를 10회 기록했어요!",
+  "@badgeFeeding10Desc": {"description":"배지 설명: 수유 10회"},
+  "badgeFeeding10Warm": "10번의 수유... 한 방울 한 방울이 사랑이에요.",
+  "@badgeFeeding10Warm": {"description":"배지 따뜻한 톤: 수유 10회"},
+  "badgeFeeding10Humor": "수유 10회 달성! 파이팅!",
+  "@badgeFeeding10Humor": {"description":"배지 유머 톤: 수유 10회"},
+
+  "badgeFeeding50Title": "수유 50회",
+  "@badgeFeeding50Title": {"description":"배지: 수유 50회"},
+  "badgeFeeding50Desc": "수유 50회 기록! 정말 대단해요.",
+  "@badgeFeeding50Desc": {"description":"배지 설명: 수유 50회"},
+  "badgeFeeding50Warm": "50번의 수유... 정말 멋진 부모예요.",
+  "@badgeFeeding50Warm": {"description":"배지 따뜻한 톤: 수유 50회"},
+  "badgeFeeding50Humor": "50회! 아기가 감사해하고 있어요!",
+  "@badgeFeeding50Humor": {"description":"배지 유머 톤: 수유 50회"},
+
+  "badgeMilk1LTitle": "1리터의 사랑",
+  "@badgeMilk1LTitle": {"description":"배지: 누적 1L 수유"},
+  "badgeMilk1LDesc": "총 수유량이 1리터에 도달했어요!",
+  "@badgeMilk1LDesc": {"description":"배지 설명: 1L 수유"},
+  "badgeMilk1LWarm": "1리터의 사랑... 한 밀리리터도 소중해요.",
+  "@badgeMilk1LWarm": {"description":"배지 따뜻한 톤: 1L"},
+  "badgeMilk1LHumor": "1리터! 정말 많은 양이에요!",
+  "@badgeMilk1LHumor": {"description":"배지 유머 톤: 1L"},
+
+  "badgeNightFeedingTitle": "새벽의 영웅",
+  "@badgeNightFeedingTitle": {"description":"배지: 새벽 수유"},
+  "badgeNightFeedingDesc": "자정~새벽 5시 사이에 첫 수유를 기록했어요.",
+  "@badgeNightFeedingDesc": {"description":"배지 설명: 새벽 수유"},
+  "badgeNightFeedingWarm": "새벽에 수유하는 당신... 가장 용감한 부모예요.",
+  "@badgeNightFeedingWarm": {"description":"배지 따뜻한 톤: 새벽 수유"},
+  "badgeNightFeedingHumor": "잠이 뭐예요? 히어로 모드 ON!",
+  "@badgeNightFeedingHumor": {"description":"배지 유머 톤: 새벽 수유"},
+
+  "badgeFirstSleepTitle": "첫 수면",
+  "@badgeFirstSleepTitle": {"description":"배지: 첫 수면 기록"},
+  "badgeFirstSleepDesc": "아기의 첫 수면을 기록했어요!",
+  "@badgeFirstSleepDesc": {"description":"배지 설명: 첫 수면"},
+  "badgeFirstSleepWarm": "달콤한 꿈이 시작됐어요...",
+  "@badgeFirstSleepWarm": {"description":"배지 따뜻한 톤: 첫 수면"},
+  "badgeFirstSleepHumor": "Zzz... 첫 낮잠 기록 완료!",
+  "@badgeFirstSleepHumor": {"description":"배지 유머 톤: 첫 수면"},
+
+  "badgeSleep10Title": "수면 10회",
+  "@badgeSleep10Title": {"description":"배지: 수면 10회"},
+  "badgeSleep10Desc": "수면 기록 10회! 잘 기록하고 있어요!",
+  "@badgeSleep10Desc": {"description":"배지 설명: 수면 10회"},
+  "badgeSleep10Warm": "10번의 평화로운 수면... 잘하고 있어요.",
+  "@badgeSleep10Warm": {"description":"배지 따뜻한 톤: 수면 10회"},
+  "badgeSleep10Humor": "수면 10회! 수면 전문가 수련 중!",
+  "@badgeSleep10Humor": {"description":"배지 유머 톤: 수면 10회"},
+
+  "badgeSleepThroughTitle": "첫 통잠",
+  "@badgeSleepThroughTitle": {"description":"배지: 첫 통잠"},
+  "badgeSleepThroughDesc": "아기가 7시간 이상 통잠을 잤어요!",
+  "@badgeSleepThroughDesc": {"description":"배지 설명: 통잠"},
+  "badgeSleepThroughWarm": "밤새 푹 잤어요... 둘 다 이 순간을 받을 자격이 있어요.",
+  "@badgeSleepThroughWarm": {"description":"배지 따뜻한 톤: 통잠"},
+  "badgeSleepThroughHumor": "7시간 연속! 이게 현실이에요?!",
+  "@badgeSleepThroughHumor": {"description":"배지 유머 톤: 통잠"},
+
+  "badgeSleepRoutineTitle": "수면 루틴",
+  "@badgeSleepRoutineTitle": {"description":"배지: 3일 연속 수면"},
+  "badgeSleepRoutineDesc": "3일 연속 수면 기록!",
+  "@badgeSleepRoutineDesc": {"description":"배지 설명: 수면 루틴"},
+  "badgeSleepRoutineWarm": "3일의 루틴... 건강한 습관을 만들고 있어요.",
+  "@badgeSleepRoutineWarm": {"description":"배지 따뜻한 톤: 수면 루틴"},
+  "badgeSleepRoutineHumor": "3일 연속! 꾸준함이 답이에요!",
+  "@badgeSleepRoutineHumor": {"description":"배지 유머 톤: 수면 루틴"},
+
+  "badgeSleepWeekTitle": "수면 주간 마스터",
+  "@badgeSleepWeekTitle": {"description":"배지: 7일 연속 수면"},
+  "badgeSleepWeekDesc": "7일 연속 수면 기록!",
+  "@badgeSleepWeekDesc": {"description":"배지 설명: 수면 주간"},
+  "badgeSleepWeekWarm": "일주일 내내... 당신의 헌신이 아름다워요.",
+  "@badgeSleepWeekWarm": {"description":"배지 따뜻한 톤: 수면 주간"},
+  "badgeSleepWeekHumor": "7일! 메달을 드려야... 아, 이미 드렸네요!",
+  "@badgeSleepWeekHumor": {"description":"배지 유머 톤: 수면 주간"},
+
+  "badgeFirstRecordTitle": "안녕, 루루!",
+  "@badgeFirstRecordTitle": {"description":"배지: 첫 기록"},
+  "badgeFirstRecordDesc": "첫 번째 기록을 저장했어요!",
+  "@badgeFirstRecordDesc": {"description":"배지 설명: 첫 기록"},
+  "badgeFirstRecordWarm": "여정이 시작됐어요... 루루에 오신 걸 환영해요.",
+  "@badgeFirstRecordWarm": {"description":"배지 따뜻한 톤: 첫 기록"},
+  "badgeFirstRecordHumor": "첫 기록! 시작이 반이에요!",
+  "@badgeFirstRecordHumor": {"description":"배지 유머 톤: 첫 기록"},
+
+  "badge3DayStreakTitle": "3일 연속",
+  "@badge3DayStreakTitle": {"description":"배지: 3일 연속 기록"},
+  "badge3DayStreakDesc": "3일 연속 기록! 좋은 습관이에요!",
+  "@badge3DayStreakDesc": {"description":"배지 설명: 3일 연속"},
+  "badge3DayStreakWarm": "3일을 함께했어요... 모든 순간이 소중해요.",
+  "@badge3DayStreakWarm": {"description":"배지 따뜻한 톤: 3일 연속"},
+  "badge3DayStreakHumor": "3일! 불타오르고 있어요!",
+  "@badge3DayStreakHumor": {"description":"배지 유머 톤: 3일 연속"},
+
+  "badge7DayStreakTitle": "7일 챔피언",
+  "@badge7DayStreakTitle": {"description":"배지: 7일 연속 기록"},
+  "badge7DayStreakDesc": "7일 연속 기록! 놀라운 꾸준함!",
+  "@badge7DayStreakDesc": {"description":"배지 설명: 7일 연속"},
+  "badge7DayStreakWarm": "일주일 내내... 최고의 부모예요.",
+  "@badge7DayStreakWarm": {"description":"배지 따뜻한 톤: 7일 연속"},
+  "badge7DayStreakHumor": "7일 연속! 기네스북에 전화해야겠어요!",
+  "@badge7DayStreakHumor": {"description":"배지 유머 톤: 7일 연속"}
 }
