feat(badge): Sprint 22 Badge-1 - time/multiples badges + collection UI
- Add 7 new badges: day_7, day_100, month_1, corrected_term (time-based),
  multiples_first_record, multiples_all_fed, multiples_all_slept
- Extend BadgeCategory enum with growth, preemie, multiples
- Add babies parameter to BadgeProvider.init() for time/multiples checks
- Connect BadgeProvider.init() call in HomeProvider.loadTodayActivities()
- Add checkTimeAndMultiples() to BadgeEngine with 7 condition methods
- Add 33 i18n keys (ko/en) for badges + categories + collection UI
- Create BadgeCollectionScreen with progress bar + category sections
- Create BadgeCollectionCard with locked/unlocked states
- Add trophy icon with unseen badge indicator to HomeScreen AppBar
- Add seen/unseen badge management via SharedPreferences
- Update badge_popup.dart for 3 new categories + 28 i18n cases
- Fix test: allBadges count 13 → 20 (35/35 pass)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2639,5 +2639,92 @@
   "badge7DayStreakWarm": "A whole week... you're the best parent.",
   "@badge7DayStreakWarm": {"description": "Badge warm: 7-day streak"},
   "badge7DayStreakHumor": "7-day streak! Call the Guinness Book!",
-  "@badge7DayStreakHumor": {"description": "Badge humor: 7-day streak"}
+  "@badge7DayStreakHumor": {"description": "Badge humor: 7-day streak"},
+
+  "badgeDay7Title": "First Week",
+  "@badgeDay7Title": {"description": "Badge title: baby 7 days old"},
+  "badgeDay7Desc": "Your baby is already 7 days old!",
+  "@badgeDay7Desc": {"description": "Badge desc: 7 days"},
+  "badgeDay7Warm": "One week together... every moment is a treasure.",
+  "@badgeDay7Warm": {"description": "Badge warm: 7 days"},
+  "badgeDay7Humor": "7 days survived! Achievement unlocked: Survived Week 1!",
+  "@badgeDay7Humor": {"description": "Badge humor: 7 days"},
+
+  "badgeDay100Title": "100 Days Together",
+  "@badgeDay100Title": {"description": "Badge title: baby 100 days old"},
+  "badgeDay100Desc": "An incredible 100 days with your baby!",
+  "@badgeDay100Desc": {"description": "Badge desc: 100 days"},
+  "badgeDay100Warm": "100 days of love and growth... you've done an amazing job.",
+  "@badgeDay100Warm": {"description": "Badge warm: 100 days"},
+  "badgeDay100Humor": "100 days! That's like 2,400 diaper changes... give or take.",
+  "@badgeDay100Humor": {"description": "Badge humor: 100 days"},
+
+  "badgeMonth1Title": "One Month",
+  "@badgeMonth1Title": {"description": "Badge title: baby 1 month old"},
+  "badgeMonth1Desc": "Your baby is one month old!",
+  "@badgeMonth1Desc": {"description": "Badge desc: 1 month"},
+  "badgeMonth1Warm": "A whole month... look how far you've come together.",
+  "@badgeMonth1Warm": {"description": "Badge warm: 1 month"},
+  "badgeMonth1Humor": "30 days in! You're basically a pro now!",
+  "@badgeMonth1Humor": {"description": "Badge humor: 1 month"},
+
+  "badgeCorrectedTermTitle": "Full Term Reached",
+  "@badgeCorrectedTermTitle": {"description": "Badge title: preemie reached corrected term"},
+  "badgeCorrectedTermDesc": "Your baby has reached full term corrected age!",
+  "@badgeCorrectedTermDesc": {"description": "Badge desc: corrected term"},
+  "badgeCorrectedTermWarm": "The day we've been waiting for... your little fighter made it to term.",
+  "@badgeCorrectedTermWarm": {"description": "Badge warm: corrected term"},
+  "badgeCorrectedTermHumor": "Full term unlocked! Your baby's been leveling up this whole time!",
+  "@badgeCorrectedTermHumor": {"description": "Badge humor: corrected term"},
+
+  "badgeMultiplesFirstRecordTitle": "Multiples Journey Begins",
+  "@badgeMultiplesFirstRecordTitle": {"description": "Badge title: first record in multiples family"},
+  "badgeMultiplesFirstRecordDesc": "First record for your multiples family!",
+  "@badgeMultiplesFirstRecordDesc": {"description": "Badge desc: multiples first record"},
+  "badgeMultiplesFirstRecordWarm": "The adventure begins... twice the love, twice the joy.",
+  "@badgeMultiplesFirstRecordWarm": {"description": "Badge warm: multiples first record"},
+  "badgeMultiplesFirstRecordHumor": "First record done! Only a million more to go with multiples!",
+  "@badgeMultiplesFirstRecordHumor": {"description": "Badge humor: multiples first record"},
+
+  "badgeMultiplesAllFedTitle": "Everyone Fed",
+  "@badgeMultiplesAllFedTitle": {"description": "Badge title: all babies fed same day"},
+  "badgeMultiplesAllFedDesc": "All babies fed on the same day!",
+  "@badgeMultiplesAllFedDesc": {"description": "Badge desc: all babies fed"},
+  "badgeMultiplesAllFedWarm": "Every little one was taken care of... you're doing great.",
+  "@badgeMultiplesAllFedWarm": {"description": "Badge warm: all babies fed"},
+  "badgeMultiplesAllFedHumor": "Fed them all in one day! Multitasking level: Expert!",
+  "@badgeMultiplesAllFedHumor": {"description": "Badge humor: all babies fed"},
+
+  "badgeMultiplesAllSleptTitle": "Peaceful Night",
+  "@badgeMultiplesAllSleptTitle": {"description": "Badge title: all babies slept same day"},
+  "badgeMultiplesAllSleptDesc": "All babies had sleep records on the same day!",
+  "@badgeMultiplesAllSleptDesc": {"description": "Badge desc: all babies slept"},
+  "badgeMultiplesAllSleptWarm": "Everyone sleeping... a rare and precious moment.",
+  "@badgeMultiplesAllSleptWarm": {"description": "Badge warm: all babies slept"},
+  "badgeMultiplesAllSleptHumor": "All babies asleep at once? Quick, take a selfie... or a nap!",
+  "@badgeMultiplesAllSleptHumor": {"description": "Badge humor: all babies slept"},
+
+  "badgeCategoryGrowth": "Growth",
+  "@badgeCategoryGrowth": {"description": "Badge category name: growth"},
+  "badgeCategoryPreemie": "Preemie",
+  "@badgeCategoryPreemie": {"description": "Badge category name: preemie"},
+  "badgeCategoryMultiples": "Multiples",
+  "@badgeCategoryMultiples": {"description": "Badge category name: multiples"},
+  "badgeCategoryFeeding": "Feeding",
+  "@badgeCategoryFeeding": {"description": "Badge category name: feeding"},
+  "badgeCategorySleep": "Sleep",
+  "@badgeCategorySleep": {"description": "Badge category name: sleep"},
+  "badgeCategoryParenting": "Parenting",
+  "@badgeCategoryParenting": {"description": "Badge category name: parenting"},
+
+  "badgeCollectionTitle": "Badge Collection",
+  "@badgeCollectionTitle": {"description": "Badge collection screen title"},
+  "badgeCollectionProgress": "{count} of {total} badges earned",
+  "@badgeCollectionProgress": {"description": "Badge collection progress text", "placeholders": {"count": {"type": "int"}, "total": {"type": "int"}}},
+  "badgeCollectionEmpty": "No badges earned yet. Keep going!",
+  "@badgeCollectionEmpty": {"description": "Empty state for badge collection"},
+  "badgeLocked": "Keep going to unlock!",
+  "@badgeLocked": {"description": "Locked badge message"},
+  "badgeEarnedAt": "Earned {date}",
+  "@badgeEarnedAt": {"description": "Badge earned date", "placeholders": {"date": {"type": "String"}}}
 }
