--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -5186,5 +5186,92 @@
   "badge7DayStreakWarm": "일주일 내내... 최고의 부모예요.",
   "@badge7DayStreakWarm": {"description":"배지 따뜻한 톤: 7일 연속"},
   "badge7DayStreakHumor": "7일 연속! 기네스북에 전화해야겠어요!",
-  "@badge7DayStreakHumor": {"description":"배지 유머 톤: 7일 연속"}
+  "@badge7DayStreakHumor": {"description":"배지 유머 톤: 7일 연속"},
+
+  "badgeDay7Title": "첫 일주일",
+  "@badgeDay7Title": {"description":"배지: 출생 7일"},
+  "badgeDay7Desc": "우리 아기가 벌써 7일이 됐어요!",
+  "@badgeDay7Desc": {"description":"배지 설명: 7일"},
+  "badgeDay7Warm": "일주일을 함께했어요... 매 순간이 보물이에요.",
+  "@badgeDay7Warm": {"description":"배지 따뜻한 톤: 7일"},
+  "badgeDay7Humor": "7일 생존 완료! 업적 해제: 첫 주 클리어!",
+  "@badgeDay7Humor": {"description":"배지 유머 톤: 7일"},
+
+  "badgeDay100Title": "100일 함께",
+  "@badgeDay100Title": {"description":"배지: 출생 100일"},
+  "badgeDay100Desc": "아기와 함께한 놀라운 100일!",
+  "@badgeDay100Desc": {"description":"배지 설명: 100일"},
+  "badgeDay100Warm": "100일간의 사랑과 성장... 정말 잘하고 계세요.",
+  "@badgeDay100Warm": {"description":"배지 따뜻한 톤: 100일"},
+  "badgeDay100Humor": "100일! 기저귀 약 2,400개... 대략적인 수치입니다.",
+  "@badgeDay100Humor": {"description":"배지 유머 톤: 100일"},
+
+  "badgeMonth1Title": "한 달",
+  "@badgeMonth1Title": {"description":"배지: 출생 1개월"},
+  "badgeMonth1Desc": "우리 아기가 한 달이 됐어요!",
+  "@badgeMonth1Desc": {"description":"배지 설명: 1개월"},
+  "badgeMonth1Warm": "한 달... 함께 얼마나 멀리 왔는지 보세요.",
+  "@badgeMonth1Warm": {"description":"배지 따뜻한 톤: 1개월"},
+  "badgeMonth1Humor": "30일 돌파! 이제 거의 프로급이에요!",
+  "@badgeMonth1Humor": {"description":"배지 유머 톤: 1개월"},
+
+  "badgeCorrectedTermTitle": "만삭 도달",
+  "@badgeCorrectedTermTitle": {"description":"배지: 조산아 교정연령 만삭"},
+  "badgeCorrectedTermDesc": "우리 아기가 교정연령 만삭에 도달했어요!",
+  "@badgeCorrectedTermDesc": {"description":"배지 설명: 교정만삭"},
+  "badgeCorrectedTermWarm": "기다리던 그 날... 우리 작은 전사가 만삭에 도달했어요.",
+  "@badgeCorrectedTermWarm": {"description":"배지 따뜻한 톤: 교정만삭"},
+  "badgeCorrectedTermHumor": "만삭 달성! 아기가 계속 레벨업 중이었어요!",
+  "@badgeCorrectedTermHumor": {"description":"배지 유머 톤: 교정만삭"},
+
+  "badgeMultiplesFirstRecordTitle": "다태아 여정 시작",
+  "@badgeMultiplesFirstRecordTitle": {"description":"배지: 다태아 첫 기록"},
+  "badgeMultiplesFirstRecordDesc": "다태아 가족의 첫 기록!",
+  "@badgeMultiplesFirstRecordDesc": {"description":"배지 설명: 다태아 첫 기록"},
+  "badgeMultiplesFirstRecordWarm": "모험이 시작됐어요... 두 배의 사랑, 두 배의 기쁨.",
+  "@badgeMultiplesFirstRecordWarm": {"description":"배지 따뜻한 톤: 다태아 첫 기록"},
+  "badgeMultiplesFirstRecordHumor": "첫 기록 완료! 다태아라 백만 개 정도 더 남았어요!",
+  "@badgeMultiplesFirstRecordHumor": {"description":"배지 유머 톤: 다태아 첫 기록"},
+
+  "badgeMultiplesAllFedTitle": "모두 먹었어요",
+  "@badgeMultiplesAllFedTitle": {"description":"배지: 같은 날 모든 아기 수유"},
+  "badgeMultiplesAllFedDesc": "같은 날 모든 아기에게 수유 완료!",
+  "@badgeMultiplesAllFedDesc": {"description":"배지 설명: 전원 수유"},
+  "badgeMultiplesAllFedWarm": "모든 아기를 돌봤어요... 정말 잘하고 계세요.",
+  "@badgeMultiplesAllFedWarm": {"description":"배지 따뜻한 톤: 전원 수유"},
+  "badgeMultiplesAllFedHumor": "하루에 전원 수유! 멀티태스킹 레벨: 전문가!",
+  "@badgeMultiplesAllFedHumor": {"description":"배지 유머 톤: 전원 수유"},
+
+  "badgeMultiplesAllSleptTitle": "평화로운 밤",
+  "@badgeMultiplesAllSleptTitle": {"description":"배지: 같은 날 모든 아기 수면"},
+  "badgeMultiplesAllSleptDesc": "같은 날 모든 아기의 수면 기록 완료!",
+  "@badgeMultiplesAllSleptDesc": {"description":"배지 설명: 전원 수면"},
+  "badgeMultiplesAllSleptWarm": "모두 잠들었어요... 드물고 소중한 순간이에요.",
+  "@badgeMultiplesAllSleptWarm": {"description":"배지 따뜻한 톤: 전원 수면"},
+  "badgeMultiplesAllSleptHumor": "전원 동시 취침? 셀카 찍든지... 아니면 주무세요!",
+  "@badgeMultiplesAllSleptHumor": {"description":"배지 유머 톤: 전원 수면"},
+
+  "badgeCategoryGrowth": "성장",
+  "@badgeCategoryGrowth": {"description":"배지 카테고리: 성장"},
+  "badgeCategoryPreemie": "조산아",
+  "@badgeCategoryPreemie": {"description":"배지 카테고리: 조산아"},
+  "badgeCategoryMultiples": "다태아",
+  "@badgeCategoryMultiples": {"description":"배지 카테고리: 다태아"},
+  "badgeCategoryFeeding": "수유",
+  "@badgeCategoryFeeding": {"description":"배지 카테고리: 수유"},
+  "badgeCategorySleep": "수면",
+  "@badgeCategorySleep": {"description":"배지 카테고리: 수면"},
+  "badgeCategoryParenting": "육아",
+  "@badgeCategoryParenting": {"description":"배지 카테고리: 육아"},
+
+  "badgeCollectionTitle": "배지 컬렉션",
+  "@badgeCollectionTitle": {"description":"배지 컬렉션 화면 제목"},
+  "badgeCollectionProgress": "전체 {total}개 중 {count}개 획득",
+  "@badgeCollectionProgress": {"description":"배지 진행률", "placeholders": {"count": {"type": "int"}, "total": {"type": "int"}}},
+  "badgeCollectionEmpty": "아직 획득한 배지가 없어요. 계속 화이팅!",
+  "@badgeCollectionEmpty": {"description":"배지 없음 상태"},
+  "badgeLocked": "계속 기록하면 열 수 있어요!",
+  "@badgeLocked": {"description":"잠긴 배지 메시지"},
+  "badgeEarnedAt": "{date} 획득",
+  "@badgeEarnedAt": {"description":"배지 획득 날짜", "placeholders": {"date": {"type": "String"}}}
 }
